--- a/income/piggy_bank/static/word_cloud.html
+++ b/income/piggy_bank/static/word_cloud.html
@@ -8,11 +8,19 @@
 
 </head>
 <body>
-    <div id="04409532305a423887fea9aa80b9418c" style="width:900px; height:300px;"></div>
+    <div id="ae9b1a3c5a8142308b54fd544fda8d6f" class="chart-container" style="width:900px; height:300px;"></div>
     <script>
-        var chart_04409532305a423887fea9aa80b9418c = echarts.init(
-            document.getElementById('04409532305a423887fea9aa80b9418c'), 'white', {renderer: 'svg'});
-        var option_04409532305a423887fea9aa80b9418c = {
+        var chart_ae9b1a3c5a8142308b54fd544fda8d6f = echarts.init(
+            document.getElementById('ae9b1a3c5a8142308b54fd544fda8d6f'), 'white', {renderer: 'svg'});
+        var option_ae9b1a3c5a8142308b54fd544fda8d6f = {
+    "animation": true,
+    "animationThreshold": 2000,
+    "animationDuration": 1000,
+    "animationEasing": "cubicOut",
+    "animationDelay": 0,
+    "animationDurationUpdate": 300,
+    "animationEasingUpdate": "cubicOut",
+    "animationDelayUpdate": 0,
     "color": [
         "#c23531",
         "#2f4554",
@@ -60,7 +68,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(76,41,42)"
+                            "color": "rgb(160,11,137)"
                         }
                     }
                 },
@@ -69,7 +77,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(45,23,39)"
+                            "color": "rgb(81,29,118)"
                         }
                     }
                 },
@@ -78,7 +86,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(91,40,39)"
+                            "color": "rgb(21,125,38)"
                         }
                     }
                 },
@@ -87,7 +95,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(155,149,158)"
+                            "color": "rgb(69,101,92)"
                         }
                     }
                 },
@@ -96,7 +104,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(24,70,87)"
+                            "color": "rgb(136,108,80)"
                         }
                     }
                 },
@@ -105,7 +113,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(67,48,49)"
+                            "color": "rgb(38,60,103)"
                         }
                     }
                 },
@@ -114,7 +122,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(131,81,150)"
+                            "color": "rgb(149,11,133)"
                         }
                     }
                 },
@@ -123,7 +131,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(78,100,128)"
+                            "color": "rgb(110,93,133)"
                         }
                     }
                 },
@@ -132,7 +140,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(90,104,133)"
+                            "color": "rgb(31,98,24)"
                         }
                     }
                 },
@@ -141,7 +149,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(154,106,5)"
+                            "color": "rgb(38,119,13)"
                         }
                     }
                 },
@@ -150,7 +158,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(51,24,16)"
+                            "color": "rgb(81,21,27)"
                         }
                     }
                 },
@@ -159,7 +167,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(62,152,107)"
+                            "color": "rgb(104,103,160)"
                         }
                     }
                 },
@@ -168,7 +176,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(68,104,40)"
+                            "color": "rgb(66,155,132)"
                         }
                     }
                 },
@@ -177,7 +185,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(78,10,67)"
+                            "color": "rgb(88,67,110)"
                         }
                     }
                 },
@@ -186,7 +194,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(106,45,28)"
+                            "color": "rgb(46,63,2)"
                         }
                     }
                 },
@@ -195,7 +203,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(9,147,126)"
+                            "color": "rgb(8,42,62)"
                         }
                     }
                 },
@@ -204,7 +212,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(82,92,78)"
+                            "color": "rgb(37,104,111)"
                         }
                     }
                 },
@@ -213,7 +221,7 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(43,71,114)"
+                            "color": "rgb(82,139,8)"
                         }
                     }
                 },
@@ -222,7 +230,7 @@
                     "value": 28738.45,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(62,34,42)"
+                            "color": "rgb(66,81,82)"
                         }
                     }
                 },
@@ -231,7 +239,16 @@
                     "value": 30975.8,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(109,45,84)"
+                            "color": "rgb(73,37,23)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e744\u6708",
+                    "value": 36882.36,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(9,105,3)"
                         }
                     }
                 },
@@ -240,7 +257,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(142,124,143)"
+                            "color": "rgb(5,69,84)"
                         }
                     }
                 },
@@ -249,7 +266,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(117,137,61)"
+                            "color": "rgb(102,108,3)"
                         }
                     }
                 },
@@ -258,7 +275,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(76,149,91)"
+                            "color": "rgb(14,85,125)"
                         }
                     }
                 },
@@ -267,7 +284,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(160,43,156)"
+                            "color": "rgb(23,92,86)"
                         }
                     }
                 },
@@ -276,7 +293,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(124,36,146)"
+                            "color": "rgb(65,15,119)"
                         }
                     }
                 },
@@ -285,7 +302,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(96,80,115)"
+                            "color": "rgb(44,29,98)"
                         }
                     }
                 },
@@ -294,7 +311,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(68,141,16)"
+                            "color": "rgb(159,116,6)"
                         }
                     }
                 },
@@ -303,7 +320,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(43,70,90)"
+                            "color": "rgb(38,18,101)"
                         }
                     }
                 },
@@ -312,7 +329,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(85,30,5)"
+                            "color": "rgb(93,59,31)"
                         }
                     }
                 },
@@ -321,7 +338,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(14,140,90)"
+                            "color": "rgb(7,133,101)"
                         }
                     }
                 },
@@ -330,7 +347,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(32,149,133)"
+                            "color": "rgb(47,137,2)"
                         }
                     }
                 },
@@ -339,7 +356,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(149,23,41)"
+                            "color": "rgb(138,60,99)"
                         }
                     }
                 },
@@ -348,7 +365,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(48,72,28)"
+                            "color": "rgb(60,69,96)"
                         }
                     }
                 },
@@ -357,7 +374,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(113,86,78)"
+                            "color": "rgb(153,59,96)"
                         }
                     }
                 },
@@ -366,7 +383,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(43,96,27)"
+                            "color": "rgb(2,102,159)"
                         }
                     }
                 },
@@ -375,7 +392,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(57,98,42)"
+                            "color": "rgb(29,75,64)"
                         }
                     }
                 },
@@ -384,7 +401,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(32,42,128)"
+                            "color": "rgb(90,80,126)"
                         }
                     }
                 },
@@ -393,7 +410,7 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(134,124,21)"
+                            "color": "rgb(63,148,14)"
                         }
                     }
                 },
@@ -402,7 +419,7 @@
                     "value": 28738.45,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(116,80,64)"
+                            "color": "rgb(58,113,17)"
                         }
                     }
                 },
@@ -411,11 +428,24 @@
                     "value": 30975.8,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(84,127,82)"
+                            "color": "rgb(116,100,34)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e744\u6708",
+                    "value": 36882.36,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(49,144,135)"
                         }
                     }
                 }
-            ]
+            ],
+            "drawOutOfBound": false,
+            "textStyle": {
+                "emphasis": {}
+            }
         }
     ],
     "legend": [
@@ -437,7 +467,7 @@
         "borderWidth": 0
     }
 };
-        chart_04409532305a423887fea9aa80b9418c.setOption(option_04409532305a423887fea9aa80b9418c);
+        chart_ae9b1a3c5a8142308b54fd544fda8d6f.setOption(option_ae9b1a3c5a8142308b54fd544fda8d6f);
     </script>
 </body>
 </html>
